# cBFGS

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cbfgs/: CMakeLists.txt  bfgs.c  bfgs.h  finite_diff.c  finite_diff.h
tests/: CMakeLists.txt  rosenbrock.c  rosenbrock.h  test_main.c  test_rgb2rgbw.c  test_rosenbrock.c
